--- a/rebar.config
+++ b/rebar.config
@@ -1,7 +1,21 @@
-{erl_opts, [debug_info]}.
+% {erl_opts, [debug_info]}.
+{erl_opts, [
+    debug_info,
+    nowarn_export_all,
+    nowarn_unused_vars,
+    nowarn_unused_function
+    ]}.
+
 {deps, []}.
 
 {shell, [
   % {config, "config/sys.config"},
-    {apps, [protocol_reengineering]}
+    {apps, [reengineering]}
 ]}.
+
+
+{relx,
+ [{release, {reengineering, "0.0.1"}, [reengineering]},
+  {mode, prod},
+  {dev_mode, false},
+  {include_erts, true}]}.
