--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,3 @@
-% {erl_opts, [debug_info]}.
 {erl_opts, [
     debug_info,
     nowarn_export_all,
@@ -9,37 +8,13 @@
 {deps, []}.
 
 {shell, [
-  % {config, "config/sys.config"},
     {apps, [reengineering]}
 ]}.
+
 
 
 {relx,
  [{release, {reengineering, "0.0.1"}, [reengineering]},
   {mode, prod},
-  {dev_mode, true},
-  {include_erts, false}]}.
-
-  {profiles, 
-  [{prod, [{relx, [
-                   {dev_mode, false},
-                   {include_erts, true}
-                  ]
-          }]
-   }]}.
-%% == EUnit ==
-
-%% eunit:test(Tests)
-% {eunit_tests, [{application, reengineering}]}.
-%% Options for eunit:test(Tests, Opts)
-% {eunit_opts, [verbose]}.
-% %% Additional compile options for eunit. erl_opts is also used
-% {eunit_compile_opts, [{d, some_define}]}.
-% %% {erl_first_files, ...} but for Eunit
-% {eunit_first_files, ["test/tests.erl"]}.
-
-%% == EDoc ==
-
-%% EDoc options, same as those passed to the edoc compiler
-%% when called by hand.
-{edoc_opts,[{reengineering,true},{private,true}]}.
+  {dev_mode, false},
+  {include_erts, true}]}.
